# pisite

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.MD  docker-compose.yml  nginx.conf
backend/: Cargo.toml
backend/doc/: back.md
backend/migrations/: 202604250001_initial_schema.sql
backend/src/: api_catalog.rs  auth.rs  config.rs  donor_support.rs  main.rs  models.rs  routes.rs
backend/src/handlers/: admin_internal_middleware.rs  admin_profile.rs  api_endpoint_policies.rs  api_key_middleware.rs  api_keys.rs  auth.rs  changelog.rs  donor_admin.rs  donor_client.rs  donor_public.rs  faqs.rs  features.rs  hero.rs  image_storage.rs  minecraft_api.rs  misc.rs  mod.rs  right_click_servers.rs  server_submissions.rs  settings.rs  signaling.rs  sponsors.rs  stats.rs  submission_email.rs  upload.rs
backend/src/init/: daemons.rs  db.rs  mod.rs
docs/: ServerList.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/components/: Changelog.tsx  DeferredSection.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Sponsors.tsx
frontend/src/lib/: design-tokens.ts  home-i18n.tsx  minecraft.ts  validation.ts
frontend/src/pages/: ChangelogPage.tsx  Landing.tsx
frontend/src/pages/ServerSubmission/: SuccessPreview.tsx  index.tsx  types.ts  useServerSubmission.ts
frontend/src/pages/admin/: AdminLayout.tsx  Dashboard.tsx  Login.tsx  ManageAdminProfile.tsx  ManageFAQ.tsx  (+13 more)
frontend/src/types/: index.ts
(+17 files in other folders)
